...

    private var settingsToolbarItem: some ToolbarContent {
        ToolbarItem(placement: .topBarTrailing) {
            Button {
                showsSettings = true
            } label: {
                Label("Einstellungen", systemImage: "gearshape")
            }
        }
    }
}

